--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -8,4 +8,9 @@
     tools:context=".activitys.HomeActivity"
     tools:showIn="@layout/activity_home">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:id="@+id/home_listView"
+        android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
