--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/action_disconnect"
-        android:orderInCategory="100"
         android:icon="@android:drawable/ic_lock_power_off"
+        android:orderInCategory="100"
         android:title="@string/action_disconnect"
         app:showAsAction="ifRoom" />
 
@@ -14,6 +14,12 @@
         android:id="@+id/action_home_screen"
         android:orderInCategory="100"
         android:title="@string/action_home_screen"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/set_message_in_database"
+        android:orderInCategory="100"
+        android:title="Set message in database"
         app:showAsAction="never" />
 
 </menu>
