--- a/app/src/main/res/layout/activity_firebase_database.xml
+++ b/app/src/main/res/layout/activity_firebase_database.xml
@@ -7,6 +7,7 @@
     tools:context=".activitys.FirebaseDatabaseActivity">
 
     <TextView
+        android:saveEnabled="true"
         android:id="@+id/database_messag_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -30,6 +31,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/database_message-field"
+                android:saveEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/type" />
