Melhorando a representação dos itens do listview customizado

--- a/app/src/main/res/layout/item_residuo.xml
+++ b/app/src/main/res/layout/item_residuo.xml
@@ -12,12 +12,15 @@
         android:layout_margin="10dp"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--TextView para o nome do residuo-->
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/residue_name_textview"
         android:layout_width="wrap_content"
+        android:textSize="25sp"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginStart="8dp"
@@ -35,6 +38,7 @@
         android:gravity="center_horizontal"
         android:layout_margin="10dp"
         android:text="reciclable?"
+        android:textSize="11sp"
         app:layout_constraintLeft_toRightOf="@id/residue_category"
         app:layout_constraintRight_toLeftOf="@id/residue_category"
         app:layout_constraintTop_toBottomOf="@id/residue_category" />
