--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:background="@android:color/white">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/item_activity_database_textview_user_email"
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/empty_content_msg"
-        android:textColor="@color/light_gray"
+        android:textColor="@android:color/black"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:textSize="18dp"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/empty_content_msg"
-        android:textColor="@color/light_gray"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
