--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -6,20 +6,26 @@
     <item
         android:id="@+id/action_disconnect"
         android:icon="@android:drawable/ic_lock_power_off"
-        android:orderInCategory="100"
+        android:orderInCategory="1"
         android:title="@string/action_disconnect"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_home_screen"
-        android:orderInCategory="100"
+        android:orderInCategory="2"
         android:title="@string/action_home_screen"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/set_message_in_database"
-        android:orderInCategory="100"
+        android:orderInCategory="3"
         android:title="Set message in database"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/show_snackkbar_with_current_user_information"
+        android:title="current user information"
+        app:showAsAction="never"
+        android:orderInCategory="4"/>
 
 </menu>
