--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,9 @@
         <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 
+    <style name="SharedAnimationActivityTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowContentTransitions">true</item>
+
+    </style>
+
 </resources>
