--- a/app/src/main/res/drawable/bg_login_screen_animation_frame_1.xml
+++ b/app/src/main/res/drawable/bg_login_screen_animation_frame_1.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:angle="18"
-        android:centerColor="@color/colorAccent"
-        android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimaryDark"/>
+   <gradient
+       android:startColor="@color/colorPrimary"
+       android:centerColor="@color/colorPrimaryDark"
+       android:endColor="@color/colorAccent"/>
 </shape>
