--- a/app/src/main/res/drawable/bg_login_screen_animation_frame_10.xml
+++ b/app/src/main/res/drawable/bg_login_screen_animation_frame_10.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:angle="60"
+    <gradient
         android:centerColor="#3e4f5b"
         android:startColor="#3e4f17"
         android:endColor="#2e7f2a"/>
