--- a/app/src/main/res/drawable/bg_login_screen_animation_frame_13.xml
+++ b/app/src/main/res/drawable/bg_login_screen_animation_frame_13.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:angle="75"
+    <gradient
         android:centerColor="@color/colorAccent"
         android:startColor="@color/colorPrimary"
         android:endColor="@color/colorPrimaryDark"/>
