--- a/app/src/main/res/drawable/bg_login_screen_animation_frame_2.xml
+++ b/app/src/main/res/drawable/bg_login_screen_animation_frame_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:angle="20"
+    <gradient
         android:centerColor="#3e7f1b"
         android:startColor="#0e4f50"
         android:endColor="#0e2f1a"/>
