--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -9,9 +9,9 @@
     tools:showIn="@layout/activity_home">
 
     <ListView
-        android:animateLayoutChanges="true"
-        android:layout_width="match_parent"
         android:id="@+id/home_listView"
-        android:layout_height="match_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true" />
 
 </android.support.constraint.ConstraintLayout>
