--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
     android:id="@+id/main_login_constraint_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context="br.com.thiagosousa.firebaseexamples.activitys.LoginActivity">
 
 
@@ -14,24 +14,28 @@
         android:id="@+id/loginFormLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/field_margin"
         android:layout_marginLeft="@dimen/field_margin"
         android:layout_marginRight="@dimen/field_margin"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        android:layout_marginBottom="@dimen/field_margin"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="parent">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputLayoutEmail"
+            app:boxCornerRadiusBottomLeft="25dp"
+            app:boxCornerRadiusBottomRight="25dp"
+            app:boxCornerRadiusTopLeft="25dp"
+            app:boxCornerRadiusTopRight="25dp"
+            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputEditText
+            <EditText
                 android:id="@+id/email_field_for_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/selector_edittext_square_black"
                 android:drawableEnd="@drawable/mail_outline_black_18x18"
                 android:hint="@string/hint_email_field"
                 android:inputType="textEmailAddress"
@@ -40,36 +44,42 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/field_margin"
-            app:passwordToggleEnabled="true"
-
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">
+            app:boxCornerRadiusBottomLeft="25dp"
+            app:boxCornerRadiusBottomRight="25dp"
+            app:boxCornerRadiusTopLeft="25dp"
+            app:boxCornerRadiusTopRight="25dp"
+            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
+            android:layout_marginTop="@dimen/field_margin"
 
-            <android.support.design.widget.TextInputEditText
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/password_field_for_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/password_field_for_login"
+                android:background="@drawable/selector_edittext_square_black"
                 android:drawableEnd="@drawable/lock_outline_black_18x18"
                 android:hint="@string/hint_password_field"
                 android:inputType="textPassword"
-                android:background="@drawable/selector_edittext_square_black"
                 android:padding="10dp" />
 
         </android.support.design.widget.TextInputLayout>
     </android.support.constraint.ConstraintLayout>
 
-        <Button
-            android:id="@+id/signInButton"
-            style="@style/LoginButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/button_margin_top"
-            android:layout_marginEnd="@dimen/field_margin"
-            android:text="@string/login_button"
-            app:layout_constraintTop_toBottomOf="@id/loginFormLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="SmallSp" />
+    <android.support.design.button.MaterialButton
+        android:id="@+id/signInButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/field_margin"
+        android:layout_marginTop="@dimen/button_margin_top"
+        android:text="@string/login_button"
+        android:theme="@style/LoginButtonStyle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loginFormLayout"
+        tools:ignore="SmallSp" />
 
     <Button
         android:id="@+id/registerScreenButton"
@@ -79,9 +89,9 @@
         android:layout_marginBottom="10dp"
         android:text="@string/button_register"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintRight_toLeftOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
