--- a/app/src/main/res/layout/activity_custom_list_view_view_holder.xml
+++ b/app/src/main/res/layout/activity_custom_list_view_view_holder.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activitys.CustomListViewViewHolderActivity">
 
-   <ListView
+    <ListView
+        android:id="@+id/customlistviewholderactivity_mainlistview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/customlistviewholderactivity_mainlistview">
-    </ListView>
+        android:animateLayoutChanges="true" />
 
 </android.support.constraint.ConstraintLayout>
