--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,13 +24,13 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/inputLayoutEmail"
+            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:boxCornerRadiusBottomLeft="25dp"
             app:boxCornerRadiusBottomRight="25dp"
             app:boxCornerRadiusTopLeft="25dp"
-            app:boxCornerRadiusTopRight="25dp"
-            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            app:boxCornerRadiusTopRight="25dp">
 
             <EditText
                 android:id="@+id/email_field_for_login"
@@ -43,16 +43,15 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/field_margin"
+            android:orientation="vertical"
             app:boxCornerRadiusBottomLeft="25dp"
             app:boxCornerRadiusBottomRight="25dp"
             app:boxCornerRadiusTopLeft="25dp"
             app:boxCornerRadiusTopRight="25dp"
-            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
-            android:layout_marginTop="@dimen/field_margin"
-
-            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
             app:passwordToggleEnabled="true">
 
