--- a/app/src/main/res/layout/activity_bottom_sheet.xml
+++ b/app/src/main/res/layout/activity_bottom_sheet.xml
@@ -54,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        app:fabSize="normal"
         android:clickable="true"
         android:id="@+id/bottom_sheet_activity_fab"
         android:focusable="true"
