--- a/app/src/main/res/layout/activity_firebase_database.xml
+++ b/app/src/main/res/layout/activity_firebase_database.xml
@@ -7,10 +7,10 @@
     tools:context=".activitys.FirebaseDatabaseActivity">
 
     <ListView
-        android:divider="@android:color/transparent"
         android:id="@+id/database_activity_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@id/messages_input_container"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -20,45 +20,56 @@
         android:layout_height="wrap_content"
         android:saveEnabled="true" />
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/messages_input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        android:background="@android:color/transparent"
-        android:paddingEnd="@dimen/fab_margin"
         android:paddingStart="@dimen/fab_margin"
+        android:paddingEnd="@dimen/fab_margin"
+        android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/database_message-layout"
             android:layout_width="0dp"
+            style="@style/Widget.Design.TextInputLayout"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/send_to_database_button"
+            app:layout_constraintHorizontal_weight="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/database_message-field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/selector_edittext_shapes"
                 android:hint="@string/type"
-                android:paddingBottom="5dp"
                 android:paddingLeft="20dp"
+                android:paddingBottom="5dp"
                 android:saveEnabled="true"
                 android:textColorHint="@android:color/holo_green_light" />
 
         </android.support.design.widget.TextInputLayout>
 
-        <Button
+        <android.support.design.button.MaterialButton
             android:id="@+id/send_to_database_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/send_to_database_bt" />
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/send_to_database_bt"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
