--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".RecyclerViewActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerviewactivity_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_recyclerview" />
+
 </android.support.constraint.ConstraintLayout>
