--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_login_constraint_layout"
@@ -10,27 +10,27 @@
 
 
     <!--Login form-->
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginFormLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/field_margin"
         android:layout_marginLeft="@dimen/field_margin"
         android:layout_marginRight="@dimen/field_margin"
+        android:layout_marginBottom="@dimen/field_margin"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="parent">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputLayoutEmail"
             style="@style/Base.Widget.MaterialComponents.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:boxCornerRadiusBottomLeft="25dp"
-            app:boxCornerRadiusBottomRight="25dp"
-            app:boxCornerRadiusTopLeft="25dp"
-            app:boxCornerRadiusTopRight="25dp">
+            app:boxCornerRadiusBottomEnd="25dp"
+            app:boxCornerRadiusBottomStart="25dp"
+            app:boxCornerRadiusTopEnd="25dp"
+            app:boxCornerRadiusTopStart="25dp">
 
             <EditText
                 android:id="@+id/email_field_for_login"
@@ -40,18 +40,18 @@
                 android:hint="@string/hint_email_field"
                 android:inputType="textEmailAddress"
                 android:padding="10dp" />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             style="@style/Base.Widget.MaterialComponents.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/field_margin"
             android:orientation="vertical"
-            app:boxCornerRadiusBottomLeft="25dp"
-            app:boxCornerRadiusBottomRight="25dp"
-            app:boxCornerRadiusTopLeft="25dp"
-            app:boxCornerRadiusTopRight="25dp"
+            app:boxCornerRadiusBottomEnd="25dp"
+            app:boxCornerRadiusBottomStart="25dp"
+            app:boxCornerRadiusTopEnd="25dp"
+            app:boxCornerRadiusTopStart="25dp"
             app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
             app:passwordToggleEnabled="true">
 
@@ -65,15 +65,15 @@
                 android:inputType="textPassword"
                 android:padding="10dp" />
 
-        </android.support.design.widget.TextInputLayout>
-    </android.support.constraint.ConstraintLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.design.button.MaterialButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/field_margin"
         android:layout_marginTop="@dimen/button_margin_top"
+        android:layout_marginEnd="@dimen/field_margin"
         android:text="@string/login_button"
         android:theme="@style/LoginButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,4 +93,4 @@
         app:layout_constraintRight_toLeftOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
